--- a/blog/static/css/base.css
+++ b/blog/static/css/base.css
@@ -1,15 +1,12 @@
 body, .container-fluid{
     margin: 0;  
-    background-color: #fdfdd1de;
+    background-color: #1d1d1d;
     font-family: "Noto Serif", 'Times New Roman', sans-serif;
+    color: #f7d0a1;
 }
 
 .apply-color{
     color: #363636e1;
-}
-
-.text-white{
-    color: white;
 }
 
 .size-fill{
@@ -17,220 +14,143 @@ body, .container-fluid{
 }
 
 #others{
-    min-height: Calc(100vh - 20px);
-}
-
-.tmfc_logo{
-    width: 20vw;
-    max-width: 150px;
+    min-height: calc(100vh - 60px);
 }
 
 .site-footer{
-    background:#1d1d1d;
+    background:#1d1d1df1;
+    box-shadow: 0px -5px 8px black;
 }
 
-.site-footer a{
-    text-decoration:none;
-	font-weight:bold;
-	color:rgba(255,255,255,0.7);
+.main-nav{
+    background:#1d1d1df1;
+    box-shadow: 0px 5px 8px black;
 }
 
-.site-footer a:hover {
-	color:#fff;
+.menu-btn{
+    background-color: #ff8d05;
+    border-color: #ff8d05;
+}
+a.blog-logo {
+    display: block;
+}
+.tmfc_logo{
+    width: 20vw;
+    max-width: 120px;
+}
+.socialheader{
+    padding-top: 10px;
+}
+.socialheader .fa{
+    color: #ff8d05 !important;
 }
 
-.read-next{
-    text-align: justify;
-    border-radius: 10px;
-    background-color: #a39d6fc5;
-    color:rgba(255, 255, 255, 0.856);
+.main-nav  li {
+    list-style-type: none;
+    margin: 0.5em 0 0.5em 0;
+}
+.main-nav li a{
+    text-decoration: none;
+    text-transform: capitalize;
+    position:relative;
+    width: 100%;
+    display:block;
+    text-align: left;
+    font-size: 1em;
+    color: #ff8d05;
+    border-bottom: 2px solid #f7d0a1;  
+}
+.nav-current{
+    font-size:1.1em;
+}
+.main-header{
+    height: 65vh;
+    background-image: url('/static/img/intro.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+}
+.post-full-header{
+    text-align: left;
+    padding-left: unset !important;
+    padding-right: unset !important;
+}
+.scrolltocomments{
+    text-decoration: underline;
+    color:rgb(230, 230, 38);
+}
+.page-title{
+    font-family: "Playfair Display";
+    font-size: 3em;
+    letter-spacing:-3px;
+    word-spacing: -3px;
+    text-transform: capitalize;
+    word-spacing: 5px;
+    margin: 0 0 0.5em 0;
+    color: #fffffff3;
+}
+.sub-title{
+    font-size: 1.5rem;
+    margin-bottom: 2em;
+    color: #fffffff3;
+}
+.action-btn {
+    background-color: #1d1d1d;;
+    border: 2px solid #f7d0a1;
+    color: #f7d0a1;
+    padding: 1em 2em 1em 2em;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+.action-btn:hover {
+    color: #ff8d05;
+    border-color: #ff8d05;
+    transition: color 0.2s ease-in-out, border 0.2s ease-in;
+}
+.post-header, .heading{
+    font-family: 'Playfair Display', Verdana, Geneva, Tahoma, sans-serif;
+}
+.heading{
+    color: #ff8d05;
+    margin-bottom: 1em;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+.wedo-img, .mission-img{
+    border: 2px solid #f7d0a1;
+    border-radius: 20px;
+}
+.contact{
+    width: 100%;
+}
+.delete-btn, .edit-btn{
+    margin-right: unset !important;
+}
+.delete-btn{
+    float: left !important;
+}
+
+.header-article{
+    position: relative;
+    white-space: nowrap;
 }
 
 /*Customize icons*/
 .socialheader .fa:hover{
     color: rgb(26, 197, 240) !important;
     text-decoration: none;
+    transition: color 0.2s ease-in-out;
 }
 
-.main-nav{
-    background:#1d1d1df1;
-}
-
-.main-nav nav{
-    margin-top: 10px;
-}
-
-.main-nav nav li{
-    list-style-type: none;
-    display: inline;
-    padding: 0 3px 0 3px;
-}
-.main-nav nav li a{
-    font-size: normal;
-}
-
-.main-nav nav a {
-    white-space: nowrap;
-	text-decoration:none;
-    letter-spacing:0.3px;
-    padding-right: 30px;
-    font-weight:400;
-    font-size:larger;
-	color:#ccc;
-}
-.main-nav nav .nav-current a {
-    color: #EDD63D;
-    font-weight: bold;
-}
-.main-nav nav a:hover {
-    color: #EDD63D;
-    font-weight: bold;
-}
-
+/* FOR CONTACT US PAGE */
 .bg-change{
-    background-image: url('/static/img/second-intro.jpg');
+    background-image: url('/static/img/second-intro.jpg') !important;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.index-bg{
-    background-image: url('/static/img/intro.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.main-header{
-    height: 90vh;
-    color: #FFFFFF !important;
-}
-
-.header-btn > a{
-    position: absolute;
-    top: 60vh;
-    color: #ececec;
-    font-size: 2rem;
-    padding: 12px 20px 12px 20px;
-    margin-right: 100px;
-    font-style: italic;
-    border-bottom: 6px solid;
-    border-radius: 30px;
-    background-color: #302f22;
-}
-
-.header-article{
-    left: 10vw;
-}
-.header-more{
-    left: 70vw;
-}
-
-.header-btn > a:hover{
-    top: 58vh;
-    color: rgb(194, 194, 44);
-    font-size: 2.5rem;
-    text-decoration: none;
-}
-
-.page-title{
-    padding-top: 10vh;
-    font-family: "Playfair Display";
-    font-size:4rem;
-    letter-spacing:-3px;
-    word-spacing: -3px;
-    text-transform: capitalize;
-}
-
-.post-full-header{
-    padding: 50px;
-}
-
-.pagination{
-    font-family: "Berkshire Swash", Cursive;
-}
-
-main{
-    width: 90vw;
-    max-width: 1200px;
-    background-color: #f6fafc; /*#def7f5e5;*/
-}
-main .col .cover-img{
-    /* position: relative;
-    margin-top: -100px; */
-    z-index: 3;
-    display: none;
-}
-
-main article{
-    padding: 10px;
-    margin: 1px;
-}
-
-.post-date, .post-meta{
-    font-family: "Playfair Display", sans-serif;
-}
-
-.post-meta {
-	display:block;
-	margin:1.2rem 0 0 0;
-	font-size: 0.9rem;
-	font-style:italic;
-	line-height:2.2rem;
-	color:#9EABB3;
-}
-
-.scrolltocomments{
-    color: white;
-}
-
-.scrolltocomments:hover{
-    color:rgb(230, 230, 38);
-}
-
-.post-content h5{
-    font-weight: bold;
-}
-
-.sub-title{
-    font-size: 1.5rem;
-    font-style: italic;
-    text-indent: 100px;
-}
-
-.page-title {
-	-webkit-animation:fade-in 0.6s;
-	animation:fade-in 0.6s;
-	-webkit-animation-delay:0.2s;
-	animation-delay:0.2s;
-}
-.page-description {
-	-webkit-animation:fade-in-down 0.9s;
-	animation:fade-in-down 0.9s;
-	-webkit-animation-delay:0.1s;
-	animation-delay: 0.1s;
-}
-
-.post-header, .heading{
-    font-family: 'Playfair Display', Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.post-header a, .heading{
-    color: rgb(219, 44, 44);
-    font-style: italic;
-}
-
-.post-header a:hover{
-    text-decoration: none;
-}
-
-.author{
-    font-weight: bold;
-}
-
-.author-thumb{
-    border-radius: 50%;
-    width: 30px;
-}
-
+/* FOR PAGINATION SECTION */
 .pagination .nested{
     width: 30%;
     display: inline-block;
@@ -238,7 +158,8 @@ main article{
 }
 
 .pagination .nested a{
-    color:  #363636e1;
+    color:  #ff8d05;
+    text-decoration: none;
 }
 
 .pagination .nested span.text-muted{
@@ -246,168 +167,214 @@ main article{
 }
 
 .pagination .nested a:hover{
-    color: #1d1c1ce1;
-    font-weight: bold;
+    color: #f7d0a1;
+    transition: color 0.2s ease-in;
 }
 
-.read_next p{
-    width: 100px;
-    margin: 0 auto 0 auto;
-    color: #ececec;
-    padding: 3px 8px 3px 8px;
-    border-radius: 10px;
-    text-align: center;
-    border: 2px solid #ececec;
+/* FOR COLLECTIONS PAGE */
+.post-header a{
+    color: #ffc240;
+    text-decoration: none;
+    line-height: 1.7em;
+    padding-bottom: 0.2em;
+    border-bottom: 2px solid #ff8d05;
 }
-
-.hovered-post{     /*Activated when post in read_next section is hovered*/
-    color: rgb(48, 48, 8);
+.post article{
+    border: 2px solid #f7d0a1;
+    border-radius: 20px;
+    min-height: 40vh;
+    position: relative;
+    padding: 1em;
+    display: flex;
+    align-items: center;
+}
+.post-excerpt {
+    height: 80%;
+}
+.post-meta {
     width: 100%;
-    text-align:center;
-    margin-left: -1em;
-    background-color: #ececec;
-    font-weight: bolder;
-    font-size: 1em;
-    white-space: nowrap;
+    font-size: 0.9rem;
+    font-style:italic;
+    line-height:2.2rem;
+    /* text-align: right; */
     position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 0 1em;
+}
+.read-more{
+    color: #ff8d05;
+}
+.contd-read{
+    text-decoration: underline;
     font-style: italic;
-    border: 2px solid;
-    padding: 10px;
+    font-weight: 200;
+}
+
+/* FOR ARTICLE PAGE */
+.article-meta {
+    text-align: right;
+    color: #fffffff3;
+}
+.scrolltocomments{
+    color: #ff8d05;
+}
+.article-post{
+    border: 2px solid #f7d0a1;
     border-radius: 20px;
+    position: relative;
+    padding: 1em;
+    margin-bottom: 1em;
 }
-
-.page-number{
-    line-height: 60px;
+.post-content {
+    text-align: justify;
 }
-
-.contact{
-    max-width: 50vw;
-    min-width: 300px;
+.author, .socialheader h6 {
+    color: #ff8d05;
 }
-
-.contact label{
-    color: #ececec;
+.author-thumb{
+    border-radius: 50%;
+    width: 30px;
 }
-
-.contact input[type=email], .contact textarea{
-    background-color:rgba(250, 252, 252, 0.986)
-}
-
-.index-section img{
-    width: 45vw;
+.read-next{
+    text-align: justify;
     border-radius: 20px;
+    background-color: #2c2c2bc5;
 }
-
-.wedo-img{
-    margin-left: 20px;
-}
-
-.mission-img{
-    margin-right: 20px;
-}
-
-.index-section{
+.suggestions{
+    border: 2px solid #f7d0a1;
+    border-radius: 20px;
+    min-height: 40vh;
+    position: relative;
     padding: 1em;
 }
-
-.decentralize{
-    display: inline-block;
-    height: 20px;
-    width: 20px;
+.suggestions:hover {
+    cursor: pointer;
+}
+.suggestions .post-excerpt {
+    display: flex;
+    align-items: center;
 }
 
-
-@media screen and (max-width: 1000px){
-    .menu-btn{
-        background-color: rgb(230, 230, 84);
-        border-color: rgb(230, 230, 38);
-    }
-    .tmfc_logo, .main_nav nav{
-        padding: unset !important;
-    }
-    .socialheader{
-        padding-top: 10px;
-    }
-    .socialheader .fa{
-        color: rgb(26, 197, 240) !important;
-    }
-    .main-nav nav li a{
-        position:relative;
-        width: 100%;
-        display:block;
-        text-align: left;
-        font-size: 1em;
-        border-bottom: 2px solid rgb(230, 230, 38);  
-    }
-    .nav-current{
-        font-size:1.1em;
+@media screen and (min-width: 992px){
+    main{
+        width: 90vw;
+        max-width: 1200px;
     }
     .main-header{
-        height: 65vh;
-        margin-top: unset;
+        height: 90vh;
     }
-    .post-full-header{
-        text-align: left;
-        padding-left: unset !important;
-        padding-right: unset !important;
+    .main-nav nav li{
+        display: inline;
+        padding: 0 3px 0 3px;
     }
-    .post-meta{
-        text-align: right;
+    .main-nav nav a {
+        white-space: nowrap;
+        text-decoration:none;
+        letter-spacing:0.3px;
+        padding-right: 30px;
+        font-weight:400;
+        display: inline;
+        border: unset;
+        color: #fffffff3;
     }
-    .scrolltocomments{
-        text-decoration: underline;
-        color:rgb(230, 230, 38);
+    .main-nav nav .nav-current a {
+        color: #ff8d05;
     }
-    .page-title{
-        text-align: center;
-        font-size: 3rem;
-        word-spacing: 5px;
-        padding-top: 3vh;
+    .main-nav nav a:hover {
+        color: #ff8d05;
+        transition: color 0.2s ease-in;
     }
-    .sub-title{
-        text-indent: unset !important;
-        text-align: center;
-        font-size: 1.2rem;
+    .index-section img{
+        width: 45vw;
+        border-radius: 20px;
     }
-    .header-btn{
-        margin-top: 3em;
-        margin-left: unset;
+    /* FOR CONTACT PAGE */
+    .contact-header-div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-left: 2em;
     }
-    .header-btn > a{
-        font-size: 1.5rem;
-        position: relative;
-        top: unset;
-        left: unset;
-        word-spacing: -3px;
-        color: rgb(194, 194, 44);
+    /* FOR COLLECTIONS PAGE */
+    .post article {
+        min-height: 50vh;
     }
-    .header-btn > a:hover{
-        border-bottom-style: inset;
-        
+    .post-meta {
+        font-size: 0.8rem;
     }
-    .contd-read, .read-more{
-        color: rgb(194, 194, 44);
-    }
-    .contd-read{
-        color: rgba(240, 226, 40, 0.61);
-        display:inline;
-        text-decoration: underline;
-        font-style: italic;
-        font-weight: 200;
-    }
-    .contact{
-        width: 100%;
-    }
-    .delete-btn, .edit-btn{
-        margin-right: unset !important;
-    }
-    .delete-btn{
-        float: left !important;
+    .page-number{
+        line-height: 60px;
     }
 
-    .header-article{
-        position: relative;
+    /* FOR ARTICLE PAGE */
+    .read-next {
+        margin-left: 1em;
+    }
+    .suggestions {
+        min-height: 50vh;
+    }
+    .read_next p{
+        width: 100px;
+        margin: 0 auto 0 auto;
+        color: #ececec;
+        padding: 3px 8px 3px 8px;
+        border-radius: 10px;
+        text-align: center;
+        border: 2px solid #ececec;
+    }
+    .hovered-post{     /*Activated when post in read_next section is hovered*/
+        color: rgb(48, 48, 8);
+        width: 100%;
+        text-align:center;
+        margin-left: -1em;
+        background-color: #ececec;
+        font-weight: bolder;
+        font-size: 1em;
         white-space: nowrap;
+        position: absolute;
+        font-style: italic;
+        border: 2px solid;
+        padding: 10px;
+        border-radius: 20px;
+        transition: color 1s ease-in, background-color 1s ease-in;
+    }
+
+    /* FOR CONTACT PAGE */
+    .contact{
+        max-width: 50vw;
+        min-width: 300px;
+    }
+    .contact label{
+        color: #ececec;
+    }
+    .contact input[type=email], .contact textarea{
+        background-color:rgba(250, 252, 252, 0.986)
+    }
+
+    .page-title{
+        padding-top: 10vh;
+        font-size: 3em;
+    }
+
+    .post-full-header{
+        padding: 50px;
+    }
+
+    .pagination{
+        font-family: "Berkshire Swash", Cursive;
+    } 
+    main .col .cover-img{
+        z-index: 3;
+        display: none;
+    }
+
+    .post-date, .post-meta{
+        font-family: "Playfair Display", sans-serif;
+    }
+
+    .post-header, .heading{
+        font-family: 'Playfair Display', Verdana, Geneva, Tahoma, sans-serif;
     }
 
 }
