--- a/templates/base.html
+++ b/templates/base.html
@@ -9,16 +9,20 @@
 		<meta name='viewport' content='width=device-width,initial-scale=1,shrink-to-fit=no'>
         <link rel="shortcut icon" href="#">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}"/>
+        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+		<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}"/>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}"/>
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,300italic,300,400italic,700,700italic|Playfair+Display:400,700,400italic,700italic"/>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Lato&family=Noto+Serif&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+        {% block extra_styles %}
+                
+        {% endblock %}
     <body>
 		<div class="container-fluid">
             <div id="others">
-                <div class="row main-nav sticky-top py-3">
+                <div class="row main-nav sticky-top py-3 align-items-center">
                     <div class="col-3">
                         <a class="blog-logo" href="{% url 'home' %}">
                             <img src="{% static 'img/logo.png' %}" class="pl-3 tmfc_logo" alt="TMFC logo"/>
@@ -27,8 +31,8 @@
                     <div class="col d-block d-lg-none">
                         <button class="float-right pr-2 menu-btn"><i class="fa fa-bars fa-2x"></i></button>
                     </div>
-                    <div class="col d-none d-lg-block justify-self-center">
-                        <nav id="main_nav" data-current="{{ current }}">
+                    <div class="col d-none d-lg-block d-flex justify-self-center align-items-center pt-3">
+                        <nav id="main_nav" class="main_nav" data-current="{{ current }}">
                             <ul id="menu">
                                 <li class="home nav-current" role="presentation"><a href="{% url 'home' %}">Home</a></li>
                                 <li class="collections" role="presentation"><a href="{% url 'collection' %}">Our Collections</a></li>
@@ -53,29 +57,27 @@
                 {% endblock %}
             </div>
             
-            <div class="row justify-content-center">
-                <style>
+            <div class="row site-footer">
+                <footer class="col text-center d-flex justify-content-center align-items-center p-3">
+                    <p class="m-0">&copy; 2021 TMFC - Spreading the light of the gospel.</p>
+                </footer>
+                <!-- <style>
                     #back-to-top a{
                         position: absolute;
                         top: 90vh;
                         left: 50vw;
                     }
-                </style>
-
-                <div class="col site-footer">
-                    <!-- <a href="#top" id="back-to-top" class="back-top">&uarr;jg</a> -->
-                    <footer class=" clearfix">
-                        <div class="text-center p-3">
-                            <a href="{% url 'home' %}">&copy; 2021 TMFC - Spreading the light of the gospel.</a>
-                        </div>
-                    </footer>
-                </div>
+                </style> -->
             </div>
+
+            
             
         </div>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+        <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
+        <script type="text/javascript" src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
         {% block extra_scripts %}
         {% endblock %}
