--- a/templates/collections.html
+++ b/templates/collections.html
@@ -1,26 +1,26 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<main id="content" class="content mx-auto p-3" role="main">
-    <div class="row">
+<main id="content" class="container-fluid" role="main">
+    <div class="row g-2">
         <div class="col-12">
-            <h2 class="heading apply-color">Some articles you could check out</h2>
+            <h2 class="mt-3 heading">Our Collections</h2>
         </div>
         {% for blog in page_obj %}
-        <div class="col-12 col-sm-6 col-lg-4 p-3">
-            <article class="post">
-                <div class="post-header">
-                    <h2 class="post-title"><a href="{% url 'article' blog.title %}">{{blog.title}}</a></h2>
-                </div>
-                <section class="apply-color post-excerpt">
-                    <div class="text-justify">
-                        {{blog.content}}
-                        <a class="read-more" href="{% url 'article' blog.title %}">
-                            <span class="d-sm-none contd-read">continue reading </span>&raquo;
-                        </a>
+        <div class="col-12 col-sm-6 col-lg-4 post">
+            <article class="">
+                <section class="mb-5 post-excerpt">
+                    <div class="">
+                        <h2 class="mb-3 post-header"><a href="{% url 'article' blog.title %}">{{blog.title}}</a></h2>
+                        <div class="text-justify">
+                            {{blog.sub_title}}
+                            <a class="read-more" href="{% url 'article' blog.title %}">
+                                <span class="d-sm-none contd-read">continue reading </span>&raquo;
+                            </a>
+                        </div>
                     </div>
                 </section>
-                <footer class="text-muted apply-color post-meta">
+                <footer class="mb-2 post-meta">
                     <img class="author-thumb" src="{% static 'img/gravatar.jpg' %}" alt="David" nopin="nopin"/>
                     <span>{{blog.author}}</span> &nbsp;| &nbsp;
                     <time class="post-date" datetime="{{blog.date}}">{{blog.date}}</time>
@@ -30,7 +30,7 @@
         {% endfor %}
     </div>
     <div class="col-12">
-        <nav class="pagination" role="navigation">
+        <nav class="mt-5 mb-5 pagination" role="navigation">
             <div class="nested"> 
                 {% if page_obj.has_previous %}  
                     <a class="d-block newer-posts" href="?page={{page_obj.previous_page_number}}">Newer<span class="d-none d-sm-inline"> Posts</span></a>
