--- a/blog/static/css/base.css
+++ b/blog/static/css/base.css
@@ -1,8 +1,14 @@
 body, .container-fluid{
     margin: 0;  
     background-color: #1d1d1d;
-    font-family: "Noto Serif", 'Times New Roman', sans-serif;
+    font-family: 'Dongle', sans-serif;
+    font-weight: 300;
+    /* font-size: 1.2em; */
     color: #f7d0a1;
+}
+
+p, .index-section ul {
+    filter: brightness(90%);
 }
 
 .apply-color{
@@ -20,6 +26,7 @@ body, .container-fluid{
 .site-footer{
     background:#1d1d1df1;
     box-shadow: 0px -5px 8px black;
+    font-size: 1.3em;
 }
 
 .main-nav{
@@ -36,15 +43,11 @@ a.blog-logo {
 }
 .tmfc_logo{
     width: 20vw;
-    max-width: 120px;
+    max-width: 100px;
 }
-.socialheader{
-    padding-top: 10px;
+.main-nav  nav{
+    width: 100%;
 }
-.socialheader .fa{
-    color: #ff8d05 !important;
-}
-
 .main-nav  li {
     list-style-type: none;
     margin: 0.5em 0 0.5em 0;
@@ -54,76 +57,90 @@ a.blog-logo {
     text-transform: capitalize;
     position:relative;
     width: 100%;
-    display:block;
+    display:inline-block;
     text-align: left;
-    font-size: 1em;
-    color: #ff8d05;
-    border-bottom: 2px solid #f7d0a1;  
+    border-bottom: 2px solid #f7d0a1;
+    color: #f7d0a1;
+    font-size: 1.5em;
+    filter: brightness(90%);
 }
-.nav-current{
-    font-size:1.1em;
+.main-nav .nav-current a{
+    filter: brightness(95%);
+    color: #ff8d05;
+    border-color: #ff8d05;
 }
 .main-header{
+    position: relative;
     height: 65vh;
     background-image: url('/static/img/intro.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     display: flex;
-    align-items: center;
-}
-.post-full-header{
-    text-align: left;
-    padding-left: unset !important;
-    padding-right: unset !important;
-}
-.scrolltocomments{
-    text-decoration: underline;
-    color:rgb(230, 230, 38);
+    justify-content: right;
+    align-items: flex-end;
 }
 .page-title{
-    font-family: "Playfair Display";
-    font-size: 3em;
+    font-family: 'Acme', sans-serif;
+    font-size: 3.5em;
+    text-align: right;
     letter-spacing:-3px;
     word-spacing: -3px;
     text-transform: capitalize;
     word-spacing: 5px;
-    margin: 0 0 0.5em 0;
+    margin: 0 0 0.2em 0;
     color: #fffffff3;
+    max-width: 383px;
 }
 .sub-title{
-    font-size: 1.5rem;
-    margin-bottom: 2em;
+    font-size: 1.2em;
+    margin-bottom: 1em;
     color: #fffffff3;
+    text-align: right;
+    font-style: italic;
+    font-weight: 200;
+    filter: brightness(90%);
+}
+.header-btn {
+    display: flex;
+    justify-content: right;
+    align-items: center;
 }
 .action-btn {
     background-color: #1d1d1d;;
     border: 2px solid #f7d0a1;
     color: #f7d0a1;
-    padding: 1em 2em 1em 2em;
+    /* padding: .3em .6em .3em .6em; */
+    padding: 0 .5em;
     text-transform: uppercase;
     font-weight: 700;
+    font-size: 1.5em;
+    line-height: 2em;
 }
 .action-btn:hover {
     color: #ff8d05;
     border-color: #ff8d05;
     transition: color 0.2s ease-in-out, border 0.2s ease-in;
 }
-.post-header, .heading{
-    font-family: 'Playfair Display', Verdana, Geneva, Tahoma, sans-serif;
-}
 .heading{
     color: #ff8d05;
-    margin-bottom: 1em;
+    font-size: 2em;
+    /* word-spacing: -5px; */
+    /* margin-bottom: .5em; */
+    padding-bottom: unset;
     text-transform: uppercase;
     font-weight: 700;
+}
+.index-section-text {
+    font-size: 1.4em !important;
+    text-align: justify;
 }
 .wedo-img, .mission-img{
     border: 2px solid #f7d0a1;
     border-radius: 20px;
-}
-.contact{
     width: 100%;
 }
+
 .delete-btn, .edit-btn{
     margin-right: unset !important;
 }
@@ -137,9 +154,12 @@ a.blog-logo {
 }
 
 /*Customize icons*/
-.socialheader .fa:hover{
-    color: rgb(26, 197, 240) !important;
+.socialheader .fa{
+    color: #ff8d05;
     text-decoration: none;
+}
+.socialheader .fa:hover{
+    color: #ff5405;
     transition: color 0.2s ease-in-out;
 }
 
@@ -151,10 +171,15 @@ a.blog-logo {
 }
 
 /* FOR PAGINATION SECTION */
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .pagination .nested{
     width: 30%;
-    display: inline-block;
     text-align: center;
+    font-size: 1.4em;
 }
 
 .pagination .nested a{
@@ -172,12 +197,20 @@ a.blog-logo {
 }
 
 /* FOR COLLECTIONS PAGE */
-.post-header a{
+
+.post .card-title{
     color: #ffc240;
     text-decoration: none;
-    line-height: 1.7em;
-    padding-bottom: 0.2em;
+    line-height: 1.4em;
+    font-size: 1.7em;
     border-bottom: 2px solid #ff8d05;
+}
+.post .card-text {
+    font-size: 1.4em;
+}
+.post {
+    background-color: unset;
+    /* width: 18rem; */
 }
 .post article{
     border: 2px solid #f7d0a1;
@@ -193,43 +226,49 @@ a.blog-logo {
 }
 .post-meta {
     width: 100%;
-    font-size: 0.9rem;
     font-style:italic;
-    line-height:2.2rem;
-    /* text-align: right; */
     position: absolute;
     bottom: 0;
     right: 0;
     padding: 0 1em;
+    font-size: 1.1em;
 }
 .read-more{
     color: #ff8d05;
+    font-size: 1.5em;
+    text-decoration: none;
+    background-color: unset;
+    border: 1.5px solid #ff8d05;
+    padding: 0 15px;
 }
-.contd-read{
-    text-decoration: underline;
-    font-style: italic;
-    font-weight: 200;
+.read-more:hover{
+    color: #f7d0a1;
+    border-color: unset;
+    transition: border 0.2s ease-out, color 0.2s ease-out;
 }
 
 /* FOR ARTICLE PAGE */
-.article-meta {
-    text-align: right;
-    color: #fffffff3;
+.post-div {
+    max-width: 800px;
 }
-.scrolltocomments{
+.article-header {
+    display: flex;
+    min-height: 40vh;
+    align-items: flex-end;
+    justify-content: right;
+    padding-bottom: 1em;
+}
+.article-header .page-title {
     color: #ff8d05;
 }
-.article-post{
-    border: 2px solid #f7d0a1;
-    border-radius: 20px;
-    position: relative;
-    padding: 1em;
-    margin-bottom: 1em;
+.article-header .sub-title {
+    color: #f7d0a1;
 }
-.post-content {
-    text-align: justify;
+.article-meta {
+    text-align: right;
+    color: #f7d0a1;
 }
-.author, .socialheader h6 {
+.author, .socialheader h6, .scrolltocomments{
     color: #ff8d05;
 }
 .author-thumb{
@@ -241,45 +280,104 @@ a.blog-logo {
     border-radius: 20px;
     background-color: #2c2c2bc5;
 }
-.suggestions{
-    border: 2px solid #f7d0a1;
-    border-radius: 20px;
-    min-height: 40vh;
-    position: relative;
-    padding: 1em;
+.comment-box{
+    height: 10em;
+    font-size: 1.4em;
 }
-.suggestions:hover {
-    cursor: pointer;
-}
-.suggestions .post-excerpt {
-    display: flex;
-    align-items: center;
+.comment-btn{
+    line-height: 1.2em;
+    font-size: 1.4em;
 }
 
-@media screen and (min-width: 992px){
+ /* FOR CONTACT PAGE */
+ .contact-div {
+    min-height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.contact-div .container-fluid {
+    max-width: 1024px;
+}
+.contact-form{
+    width: 100%;
+    font-size: 1.5em;
+}
+.bible-excerpt {
+    font-size: 1.3em;
+    font-weight: 900;
+    font-style: italic;
+    font-family: 'Acme', sans-serif;
+}
+.push-note {
+    color: #ff8d05;
+    font-size: 2.5em;
+    line-height: 0.8em;
+    font-weight: 700;
+}
+
+/* FOR ABOUT PAGE */
+.post-content p {
+    font-size: 1.4em;
+}
+.members-section {
+    max-width: 900px;
+}
+.members-section .col {
+    box-shadow: black 3px 1px 5px 1px;
+    padding: 2em;
+    margin: .5em;
+    border-radius: 20px;
+    max-width: 384px;
+}
+.member-img img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-right: 1em;
+}
+.member-details span {
+    display: block;
+}
+.member-details span.name {
+    font-size: 1.5em;
+    font-weight: 700;
+}
+.member-details span.role, .member-details span.location {
+    font-size: 1.1em;
+    color: #ff8d05;
+    font-style: italic;
+}
+
+@media screen and (min-width: 768px){
     main{
         width: 90vw;
-        max-width: 1200px;
+        max-width: 1024px;
     }
     .main-header{
         height: 90vh;
+        justify-content: left;
+    }
+    .main-header > div {
+        padding-bottom: 2em;
+    }
+    .main-nav > nav{
+        width: unset;
     }
     .main-nav nav li{
         display: inline;
         padding: 0 3px 0 3px;
     }
-    .main-nav nav a {
+    .main-nav nav li a {
         white-space: nowrap;
         text-decoration:none;
         letter-spacing:0.3px;
+        padding: unset;
         padding-right: 30px;
         font-weight:400;
         display: inline;
         border: unset;
-        color: #fffffff3;
-    }
-    .main-nav nav .nav-current a {
-        color: #ff8d05;
+        width: unset;
     }
     .main-nav nav a:hover {
         color: #ff8d05;
@@ -290,32 +388,25 @@ a.blog-logo {
         border-radius: 20px;
     }
     /* FOR CONTACT PAGE */
-    .contact-header-div {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-left: 2em;
+    .contact-header-div>div {
+        text-align: right;
+    }
+    .bible-excerpt {
+        font-size: 2em;
     }
     /* FOR COLLECTIONS PAGE */
-    .post article {
-        min-height: 50vh;
+    .post-header a{
+        font-size: 1.6em;
     }
-    .post-meta {
-        font-size: 0.8rem;
-    }
-    .page-number{
-        line-height: 60px;
-    }
-
     /* FOR ARTICLE PAGE */
-    .read-next {
-        margin-left: 1em;
+    .post-div {
+        max-width: 1024px;
     }
-    .suggestions {
-        min-height: 50vh;
+    .article-header {
+        justify-content: left;
     }
     .read_next p{
-        width: 100px;
+        /* width: 100px; */
         margin: 0 auto 0 auto;
         color: #ececec;
         padding: 3px 8px 3px 8px;
@@ -341,40 +432,31 @@ a.blog-logo {
     }
 
     /* FOR CONTACT PAGE */
-    .contact{
+    .contact-form{
         max-width: 50vw;
         min-width: 300px;
     }
-    .contact label{
+    .contact-form label{
         color: #ececec;
     }
-    .contact input[type=email], .contact textarea{
+    .contact-form input[type=email], .contact-form textarea{
         background-color:rgba(250, 252, 252, 0.986)
     }
 
     .page-title{
-        padding-top: 10vh;
-        font-size: 3em;
+        margin-top: 4vh;
+        font-size: 5em;
+        max-width: unset;
+        width: 461px;
+    }
+    
+    .action-btn:first-of-type {
+        margin-right: 0.2em;
     }
 
-    .post-full-header{
-        padding: 50px;
-    }
-
-    .pagination{
-        font-family: "Berkshire Swash", Cursive;
-    } 
     main .col .cover-img{
         z-index: 3;
         display: none;
-    }
-
-    .post-date, .post-meta{
-        font-family: "Playfair Display", sans-serif;
-    }
-
-    .post-header, .heading{
-        font-family: 'Playfair Display', Verdana, Geneva, Tahoma, sans-serif;
     }
 
 }
