--- a/templates/collections.html
+++ b/templates/collections.html
@@ -1,21 +1,21 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<main id="content" class="container-fluid" role="main">
+<main id="content" class="container" role="main">
     <div class="row g-2">
         <div class="col-12">
             <h2 class="mt-3 heading">Our Collections</h2>
         </div>
         {% for blog in page_obj %}
-        <div class="col-12 col-sm-6 col-lg-4 post">
+        <!-- <div class="col-12 col-sm-4 post">
             <article class="">
                 <section class="mb-5 post-excerpt">
                     <div class="">
                         <h2 class="mb-3 post-header"><a href="{% url 'article' blog.title %}">{{blog.title}}</a></h2>
-                        <div class="text-justify">
+                        <div class="text-justify excerpt-text">
                             {{blog.sub_title}}
                             <a class="read-more" href="{% url 'article' blog.title %}">
-                                <span class="d-sm-none contd-read">continue reading </span>&raquo;
+                                <span class="d-sm-none contd-read">continue&nbsp;reading</span>&raquo;
                             </a>
                         </div>
                     </div>
@@ -26,6 +26,21 @@
                     <time class="post-date" datetime="{{blog.date}}">{{blog.date}}</time>
                 </footer>
             </article>
+        </div> -->
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="card h-100 my-1 post">
+                <img class="card-img-top" src="{% static 'img/wedoimg.jpg' %}" alt="{{ blog.title }}">
+                <div class="card-body">
+                  <h5 class="card-title">{{ blog.title }}</h5>
+                  <p class="card-text">{{blog.sub_title}}</p>
+                  <a class="btn btn-dark read-more" type="button" href="{% url 'article' blog.title %}">let's&nbsp;go&nbsp;&raquo;</a>
+                </div>
+                <div class="card-footer">
+                    <img class="author-thumb" src="{% static 'img/gravatar.jpg' %}" alt="David" nopin="nopin"/>
+                    <span>{{blog.author}}</span> &nbsp;| &nbsp;
+                    <time class="post-date" datetime="{{blog.date}}">{{blog.date}}</time>
+                </div>
+            </div>
         </div>
         {% endfor %}
     </div>
