--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,10 @@
     <div class="col p-3 main-header">
         <div>
             <h1 class="page-title">the movement for christ</h1>
-            <h5 class="sub-title">"We are keen on spreading the light of the gospel."</h5>
+            <h5 class="sub-title">Think Christ. Live Christ</h5>
             <div class="header-btn">
                 <a class="btn action-btn" href="{% url 'collection' %}">View Our Articles</a>
-                <a class="btn d-none d-lg-inline-block action-btn" href="#content">Continue</a>
-                
+                <a class="btn d-none d-md-inline-block action-btn" href="#content">Continue</a>   
             </div>
         </div>
     </div>
@@ -17,10 +16,10 @@
 <main id="content" class="w-lg-75 mx-auto" role="main">
     <section class="container-fluid p-2 index-section">
         <div class="row align-items-center my-3">
-            <div class="d-block d-lg-none col-12">
+            <div class="d-block d-md-none col-12">
                 <h2 class="heading">What we stand for</h2>
                 <img src="{% static 'img/wedoimg.jpg' %}" class="img-fluid wedo-img" alt="What we do">
-                <p class="text-justify mt-2">
+                <p class="mt-2 index-section-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                     labore et dolore magna aliqua. Feugiat vivamus at augue eget. Mi bibendum neque egestas congue 
                     quisque egestas. Sit amet consectetur adipiscing elit. Egestas erat imperdiet sed euismod nisi 
@@ -30,12 +29,12 @@
                     adipiscing. Eu facilisis sed odio morbi.
                 </p>
             </div>
-            <div class="d-none d-lg-block col">
+            <div class="d-none d-md-block col">
                 <img src="{% static 'img/wedoimg.jpg' %}" class="img-fluid wedo-img" alt="What we do">
             </div>
-            <div class="d-none d-lg-block col">
+            <div class="d-none d-md-block col">
                 <h2 class="heading">What we stand for</h2>
-                <p class="text-justify mt-2">
+                <p class="mt-2 index-section-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                     labore et dolore magna aliqua. Feugiat vivamus at augue eget. Mi bibendum neque egestas congue 
                     quisque egestas. Sit amet consectetur adipiscing elit. Egestas erat imperdiet sed euismod nisi 
@@ -49,10 +48,10 @@
     </section>
     <section class="index-section">
         <div class="row align-items-center my-3">
-            <div class="d-block d-lg-none col-12">
+            <div class="d-block d-md-none col-12">
                 <h2 class="heading">Our mission statement</h2>
                 <img src="{% static 'img/missionimg.jpg' %}" class="img-fluid mission-img" alt="Our Mission Statement">
-                <p class="text-justify mt-2">
+                <p class="mt-2 index-section-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                     labore et dolore magna aliqua. Feugiat vivamus at augue eget. Mi bibendum neque egestas congue 
                     quisque egestas. Sit amet consectetur adipiscing elit. Egestas erat imperdiet sed euismod nisi 
@@ -62,9 +61,9 @@
                     adipiscing. Eu facilisis sed odio morbi.
                 </p>
             </div>
-            <div class="d-none d-lg-block col">
+            <div class="d-none d-md-block col">
                 <h2 class="heading">Our mission statement</h2>
-                <p class="text-justify mt-2">
+                <p class="mt-2 index-section-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                     labore et dolore magna aliqua. Feugiat vivamus at augue eget. Mi bibendum neque egestas congue 
                     quisque egestas. Sit amet consectetur adipiscing elit. Egestas erat imperdiet sed euismod nisi 
@@ -74,7 +73,7 @@
                     adipiscing. Eu facilisis sed odio morbi.
                 </p>
             </div>
-            <div class="d-none d-lg-block col">
+            <div class="d-none d-md-block col">
                 <img src="{% static 'img/missionimg.jpg' %}" class="img-fluid mission-img" alt="Our Mission Statement">
             </div>
         </div>
@@ -83,7 +82,7 @@
         <div class="row my-3">
             <div class="col">
                 <h2 class="heading">How it works</h2>
-                <ul class="">
+                <ul class="index-section-text">
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</li>
                     <li>labore et dolore magna aliqua. Feugiat vivamus at augue eget. Mi bibendum neque egestas congue </li>
                     <li>quisque egestas. Sit amet consectetur adipiscing elit. Egestas erat imperdiet sed euismod nisi </li>
