--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,8 @@
                             <img src="{% static 'img/logo_tmfc.png' %}" class="pl-3 tmfc_logo" alt="TMFC logo"/>
                         </a>
                     </div>
-                    <div class="col d-block d-md-none">
-                        <button class="float-right pr-2 menu-btn"><i class="fa fa-bars fa-2x"></i></button>
+                    <div class="col d-md-none">
+                        <button class="pr-2 menu-btn"><i class="fa fa-bars fa-2x"></i></button>
                     </div>
                     <div class="col d-none d-md-block d-flex justify-self-center align-items-center pt-3">
                         <nav id="main_nav" class="main_nav" data-current="{{ current }}">
