Updated logic for crud operations on blog

--- a/templates/about.html
+++ b/templates/about.html
@@ -32,6 +32,11 @@
 </main>
 <div class="mb-4 d-flex justify-content-center align-items-center">
     <section class="container-fluid members-section">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="heading text-center">Meet the Admins</h2>
+            </div>
+        </div>
         <div class="row justify-content-center">
             <div class="col col-12 col-sm-6 d-flex align-items-center justify-content-center">
                 <div class="member-img">
