--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
             <div class="row site-footer">
                 <footer class="col text-center d-flex justify-content-center align-items-center p-3">
                     <div>
-                        <p class="m-0">&copy;2020 TMFC - Think Christ. Live Christ.</p>
+                        <p class="m-0">&COPY;2020 TMFC - Think Christ. Live Christ.</p>
                         <p class="m-0" style="font-style: italic;">
                             Follow Us - 
                             <span class="socialheader">
