--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
             <h5 class="sub-title">Think Christ. Live Christ</h5>
             <div class="header-btn">
                 <a class="btn action-btn" href="{% url 'collection' %}">View Our Articles</a>
-                <a class="btn d-none d-md-inline-block action-btn" href="#content">Continue</a>   
+                <a class="btn d-none d-md-inline-block action-btn continue-btn" href="#content">Continue</a>   
             </div>
         </div>
     </div>
